--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <div class="container-fluid">
-        <nav style="min-height:130px;">
-            <div class="row px-5 d-lg-flex m-0 d-none w-100 bg-white" id="top">
+        <nav class="d-none d-lg-block fixed-header" style="height:130px;">
+            <div class="row px-5 d-lg-flex m-0 w-100" id="top">
                 <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
                     <a href="index.html" class="sygnet">
                         <img src="img/sygnet.svg" class="img-fluid"/>
@@ -109,7 +109,7 @@
             <div class="col-12 p-0 ">
                 <div class="bgLeftHome d-none d-lg-block"></div>
                <div class="container d-flex justify-content-center flex-column p-0">
-                    <div class="d-none homeBackgroundText d-lg-flex align-items-center justify-content-between"  >
+                    <div class="d-none homeBackgroundText d-lg-flex align-items-center justify-content-between px-md-5 px-lg-0"  >
                         <h1 data-aos="fade-up" data-aos-delay="150">
                             Specjalizujemy się w maksymalizowaniu<br>
                             i budowaniu wartości przedsiębiorstw
@@ -199,7 +199,7 @@
         <div class="row px-lg-5 offerSection m-0 ">
             <div class="col-12 p-0 ">
                 <div class="bgLeftOffer d-none d-lg-block" ></div>
-               <div class="container offerBackground d-flex justify-content-center flex-column">
+               <div class="container offerBackground d-flex justify-content-center flex-column px-5 px-xl-0">
                     <div class="row mt-5 mt-lg-0 pt-5 pt-lg-0 px-5 px-lg-0 mx-0" data-aos="fade-up">
                         <span class="text-white expierienceTxt">Oferujemy wsparcie w zakresie budowania i wdrażania strategii rozwoju, zarówno w drodze wzrostu<br>
                             organicznego, jak i poprzez akwizycje. Pomagamy włascicelom i zarządom przedsiebiorstw w implementacji <br>
@@ -236,7 +236,7 @@
                                 </div>
                                 <span class="btnTxt">Poznaj zespół</span>
                             </a>
-                            <a name="" id="" class="buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-center ml-3" href="experience.html" role="button" data-aos="fade-up" data-aos-delay="200">
+                            <a name="" id="" class="buttonRounded hvr-icon-wobble-horizontal d-flex justify-content-center ml-xl-3" href="experience.html" role="button" data-aos="fade-up" data-aos-delay="200">
                                 <div class="arrowRight mr-4">
                                     <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                                 </div>
