--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <div class="col-12">
                 <!-- The overlay -->
                 <div id="myNav" class="overlay d-flex flex-column align-items-end justify-content-between">
-                    <div class="row px-5 d-flex m-0" id="top">
+                    <div class="row px-5 d-flex m-0" style="background-color: none;" id="navTop">
                         <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-end">
                             <div class="menuIcon d-lg-none">
                                 <img src="img/close.png" class="img-fluid" onclick="closeNav()" alt="">
                             </div>
                         </div>
                     </div>
-                    <div class="row px-5 d-flex m-0" id="top">
+                    <div class="row px-5 d-flex m-0">
                         <div class="col-12 p-0 col-lg-3 d-flex align-items-end justify-content-end">
                             <div class="overlay-content">
                                 <a href="about.html">O Nas</a>
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row px-5 d-flex m-0 mb-5" id="top">
+                    <div class="row px-5 d-flex m-0 mb-5">
                         <div class="col-12 p-0 col-lg-3 d-flex align-items-end justify-content-end">
                             <div class="overlay-content">
                                 <a href="#" class="politykaPrywatnosci">
@@ -79,7 +79,7 @@
         <!--  -->
 
         
-        <div class="row px-lg-5 m-0">
+        <div class="row px-lg-5 m-0" id="homeBackgroundFull">
             <div class="col-12 p-0">
                 <div class="row d-lg-none m-0 p-0 position-absolute w-100">
                     <div class="col-12 p-0">
@@ -105,7 +105,7 @@
 
 
 
-        <div class="d-none d-lg-block row px-lg-5 m-0 " style="margin-top:-385px !important;" id="homeBackground">
+        <div class="d-none d-lg-block row px-lg-5 m-0 fixed-boxHome" id="homeBackground">
             <div class="col-12 p-0 ">
                 <div class="bgLeftHome d-none d-lg-block"></div>
                <div class="container d-flex justify-content-center flex-column p-0">
@@ -122,14 +122,14 @@
             </div>
         </div>
         
-        <div class="row d-lg-none m-0 p-0" id="infoHome" data-aos="fade-up" style="margin-top:-285px !important;">
+        <div class="row d-lg-none m-0 p-0 fixed-boxHome" id="infoHome" data-aos="fade-up">
             <div class="col-12 p-0">
                 <div class="homeBackgroundText d-flex flex-column align-items-center justify-content-center px-lg-5">
                     <h1 class="pl-lg-5 ml-5">
                         Specjalizujemy się w maksymalizowaniu<br>
                         i budowaniu wartości przedsiębiorstw
                     </h1>
-                    <a href="#experience" class="arrowDown d-flex align-self-end mr-4">
+                    <a href="#experience" class="arrowDown d-flex align-self-end mr-2">
                         <img src="img/arror_down.svg" class="img-fluid" alt="">
                     </a>
                 </div>
@@ -199,7 +199,7 @@
         <div class="row px-lg-5 offerSection m-0 ">
             <div class="col-12 p-0 ">
                 <div class="bgLeftOffer d-none d-lg-block" ></div>
-               <div class="container offerBackground d-flex justify-content-center flex-column px-5 px-xl-0">
+               <div class="container offerBackground d-flex justify-content-center flex-column px-lg-5 px-xl-0">
                     <div class="row mt-5 mt-lg-0 pt-5 pt-lg-0 px-5 px-lg-0 mx-0" data-aos="fade-up">
                         <span class="text-white expierienceTxt">Oferujemy wsparcie w zakresie budowania i wdrażania strategii rozwoju, zarówno w drodze wzrostu<br>
                             organicznego, jak i poprzez akwizycje. Pomagamy włascicelom i zarządom przedsiebiorstw w implementacji <br>
@@ -322,7 +322,7 @@
     <script src="script/acbc18888d.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script type="application/javascript">
+    <!-- <script type="application/javascript">
         (function($) {
             $(window).scroll(function() {
             var heightDiv=$("#infoHome").height();
@@ -341,6 +341,6 @@
                     }
             });
         })(jQuery);
-    </script>
+    </script> -->
 </body>
 </html>
