--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <div class="container-fluid">
-            <div class="row px-5 d-flex m-0" id="top">
+        <nav class="d-lg-block fixed-header" style="height:130px;">
+            <div class="row px-5 d-flex m-0 w-100" id="top">
                 <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
                     <a href="index.html" class="sygnet">
                         <img src="img/sygnet.svg" class="img-fluid"/>
@@ -28,11 +29,12 @@
                             <li><a href="offer.html">Oferta</a></li>
                             <li><a href="team.html">Zespół</a></li>
                             <li><a href="experience.html">Doświadczenie</a></li>
-                            <li><a href="contact.html">Kontakt</a></li>
+                            <li><a href="contact.html" class="active">Kontakt</a></li>
                         </ul>
                     </nav>    
                 </div>
             </div>
+        </nav>
 
         <!-- Navigation -->
 
