--- a/experience.html
+++ b/experience.html
@@ -12,27 +12,29 @@
   </head>
   <body>
     <div class="container-fluid">
-        <div class="row px-5 d-flex m-0" id="top">
-            <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
-                <a href="index.html" class="sygnet">
-                    <img src="img/sygnet.svg" class="img-fluid"/>
-                </a>
-                <div class="menuIcon d-lg-none" onclick="openNav()">
-                    <img src="img/menu.png" class="img-fluid" alt="">
+        <nav class="d-lg-block fixed-header" style="height:130px;">
+            <div class="row px-5 d-flex m-0 w-100" id="top">
+                <div class="col-12 p-0 col-lg-3 d-flex align-items-center justify-content-between justify-content-lg-start">
+                    <a href="index.html" class="sygnet">
+                        <img src="img/sygnet.svg" class="img-fluid"/>
+                    </a>
+                    <div class="menuIcon d-lg-none" onclick="openNav()">
+                        <img src="img/menu.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
+                    <nav id="menu" class="d-flex justify-content-end">      
+                        <ul class="d-flex align-items-center">
+                            <li><a href="about.html">O Nas</a></li>
+                            <li><a href="offer.html">Oferta</a></li>
+                            <li><a href="team.html" >Zespół</a></li>
+                            <li><a href="experience.html" class="active">Doświadczenie</a></li>
+                            <li><a href="contact.html">Kontakt</a></li>
+                        </ul>
+                    </nav>    
                 </div>
             </div>
-            <div class="d-none d-lg-flex col-lg-9 align-items-center justify-content-end p-0">
-                <nav id="menu" class="d-flex justify-content-end">      
-                    <ul class="d-flex align-items-center">
-                        <li><a href="about.html">O Nas</a></li>
-                        <li><a href="offer.html">Oferta</a></li>
-                        <li><a href="team.html">Zespół</a></li>
-                        <li><a href="experience.html">Doświadczenie</a></li>
-                        <li><a href="contact.html">Kontakt</a></li>
-                    </ul>
-                </nav>    
-            </div>
-        </div>
+        </nav>
 
         <!-- Navigation -->
 
@@ -75,7 +77,7 @@
         </div>
 
         <!--  -->
-        <div class="row px-lg-5 m-0">
+        <div class="row px-lg-5 mx-0">
             <div class="col-12 p-0">
                 <div class="position-absolute d-flex" style="width:100%;height:100%;">
                     <div class="d-none d-lg-block bgLayerPage1"></div>
@@ -164,7 +166,7 @@
                                 Braliśmy udział w opracowaniu długoterminowego systemu motywacyjnego dla Zarządu spółki usługowej opartego o wzrost wartości dla akcjonariuszy. Współpracujemy z właścicielami spółki oraz zarządem nad wdrożeniem systemu oraz rozliczaniem zamkniętych okresów.                            </span>
                        </div>
                    </div>
-                   <div class="row mt-5 d-flex align-items-center mb-5 mb-lg-0" data-aos="fade-up">
+                   <div class="row mt-5 d-flex align-items-center mb-5 mb-lg-0" >
                     <div class="col-12 col-lg-8 d-none d-lg-flex">
                          <div class="progressBox d-flex" >
                             <div class="progressLine" onclick="currentSlide(1)"></div>
