--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="homeBackground d-flex flex-column justify-content-start">
-                    <div class="container">
+                    <div class="container" id="logoHomePosition">
                         <div class="homeLogo d-flex" data-aos="fade-up">
                             <img src="img/logo_white.svg" class="img-fluid" alt="">
                         </div>
