--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
         <!--  -->
 
-        <div class="row px-lg-5 mx-0">
+        <div class="row px-lg-5 mx-0 marginTop">
             <div class="col-12 p-0">
                 <div class="position-absolute d-flex" style="width:100%;height:100%;">
                     <div class="d-none d-lg-block bgLayerPage1"></div>
@@ -95,8 +95,8 @@
                                 <img src="img/onas.jpg" class="img-fluid d-lg-none" alt="" data-aos="fade-up">
                                 <span class="mt-5 pageTxt mx-5 mx-lg-0 pb-5 pb-lg-0" >
                                     <div data-aos="fade-up" data-aos-delay="100">Mamy na koncie liczne projekty doradcze, w ramach których wdrażaliśmy wieloletnie strategie rozwoju ukierunkowane na budowę wartości. Posiadamy doświadczenie w pracy ze spółkami z różnych sektorów, m.in. IT, TSL, budownictwo, dystrybucja, przemysł, usługi specjalistyczne.<br><br> Braliśmy udział w kilkudziesięciu procesach M&A zakończonych transakcją o wartości od kilku do kilkuset milionów zł, zarówno jako doradca po stronie kupującego (buy-side), jak i sprzedającego (sell-side). Przeprowadziliśmy szereg szczegółowych analiz due diligence oraz wycen spółek będących potencjalnymi celami akwizycyjnymi dla naszych klientów. W większości analizy dotyczyły spółek technologicznych, dla których stosujemy metodykę wyceny w oparciu o zasoby kapitału intelektualnego.</div>                                
-                                    <div class="row m-0">
-                                        <a name="" id="" class="d-none  mt-5 hvr-icon-wobble-horizontal d-lg-flex buttonRounded bg-white justify-content-lg-center justify-content-between" href="team.html" role="button" data-aos="fade-up" data-aos-delay="200">
+                                    <div class="row m-0" data-aos="fade-up" data-aos-delay="200">
+                                        <a name="" id="" class="d-none  mt-5 hvr-icon-wobble-horizontal d-lg-flex buttonRounded bg-white justify-content-lg-center justify-content-between" href="team.html" role="button">
                                             <div class="arrowRight mr-lg-4">
                                                 <img src="img/arrow_right.svg" class="img-fluid hvr-icon" alt="">
                                             </div>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl" class="bluePrimaryTxt">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
