--- a/offer.html
+++ b/offer.html
@@ -78,7 +78,7 @@
 
         <!--  -->
 
-        <div class="row px-lg-5 mx-0">
+        <div class="row px-lg-5 mx-0 marginTop">
             <div class="col-12 p-0">
                 <div class="offerPageBackground h-100">
                     <div class="container d-flex flex-column justify-content-between h-100 p-0">
@@ -292,7 +292,7 @@
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl" class="bluePrimaryTxt">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
