--- a/team.html
+++ b/team.html
@@ -114,8 +114,8 @@
                     <span class="pr-5" data-aos="fade-up" data-aos-delay="150">
                         Posiada ponad 25 letnie doświadczenie w operacyjnym zarządzaniu dużymi przedsiębiorstwami, w tym spółkami giełdowymi, w szczególności w obszarach finansów i M&A . Zarządzając przedsiębiorstwami koncentrował się w szczególności na optymalizacja procesów wewnętrznych i poprawie efektywności. Zrealizował szereg projektów M&A, zarówno po stronie kupującego, jak i sprzedającego, zarządzając wszystkimi etapami procesu od selekcji potencjalnych celów akwizycyjnych/potencjalnych inwestorów, ewaluacji, negocjacji warunków inwestycji, zamknięcia inwestycji do zarządzania procesami integracji po transakcji.
                     </span>
-                    <div class="row mx-0">
-                        <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button" data-aos="fade-up" data-aos-delay="150">
+                    <div class="row mx-0" data-aos="fade-up" data-aos-delay="150">
+                        <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button">
                             <div class="arrowRight mr-lg-4">
                                 <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                             </div>
@@ -140,8 +140,8 @@
                     </div>
                     <span class="pr-5" data-aos="fade-up" data-aos-delay="50">
                         Posiada kilkunastoletnie doświadczenie w obszarze doradztwa strategicznego i biznesowego oraz procesów M&A, w tym realizacji procesów akwizycyjnych. Specjalizuje się w analizie biznesowej oraz identyfikacji generatorów wartości spółek, w szczególności w zakresie zasobów kapitału intelektualnego. Jako Manager Inwestycyjny funduszu Giza Polish Ventures zarządzał procesem identyfikacji i ewaluacji spółek innowacyjnych oraz procesami wyjść z inwestycji w spółki portfelowe.                    </span>
-                    <div class="row mx-0">
-                        <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button" data-aos="fade-up" data-aos-delay="50">
+                    <div class="row mx-0" data-aos="fade-up" data-aos-delay="50">
+                        <a name="" id="" class="buttonRounded mt-5 hvr-icon-wobble-horizontal d-flex justify-content-lg-center justify-content-between" href="#" role="button">
                             <div class="arrowRight mr-lg-4">
                                 <img src="img/arrow_right2.svg" class="img-fluid hvr-icon" alt="">
                             </div>
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl" class="bluePrimaryTxt">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
