--- a/experience.html
+++ b/experience.html
@@ -77,7 +77,7 @@
         </div>
 
         <!--  -->
-        <div class="row px-lg-5 mx-0">
+        <div class="row px-lg-5 mx-0 marginTop">
             <div class="col-12 p-0">
                 <div class="position-absolute d-flex" style="width:100%;height:100%;">
                     <div class="d-none d-lg-block bgLayerPage1"></div>
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                     <div class="container d-lg-none d-flex align-items-center justify-content-end py-5">
-                        <a href="mailto:biuro@teamvalue.pl">biuro@teamvalue.pl</a>
+                        <a href="mailto:biuro@teamvalue.pl" class="bluePrimaryTxt">biuro@teamvalue.pl</a>
                     </div>
                 </div>
                 
